# PhotonCamera

./: .gitignore  AGENTS.md  GEMINI.md  README.md  TODO.md  doc.md  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: 1.yaml  android-build.yml  build.yaml  build.yml
app/: build.gradle.kts  debug.keystore  proguard-rules.pro
app/src/androidTest/java/com/hinnka/mycamera/: ExampleInstrumentedTest.kt
app/src/china/: AndroidManifest.xml
app/src/default/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dncnn.tflite
app/src/main/assets/dcp/: Canon EOS R6 Mark III Camera Portrait.dcp  Google Pixel 10 Pro XL Wide Camera Adobe Standard.dcp  OPPO Find X8 Ultra back camera 8.67mm f1.8 Adobe Standard.dcp  Panasonic DC-S9 Camera Standard.dcp  RICOH GR IV Camera Negative Film.dcp  Samsung Galaxy S26 Ultra Rear Wide Camera Adobe Standard.dcp  Xiaomi 17 Ultra Rear Wide Camera Adobe Standard.dcp
app/src/main/assets/frames/: 01_classic_white.json  02_black_border.json  03_no_frame.json  04_polaroid.json  05_kodak_portra_400.json  05_time.json  06_film_vintage.json  classic_white.json  film_vintage.json  minimal_black.json  polaroid.json  pro_camera.json
app/src/main/assets/luts/: Kodak_ultramax_400+2383.33.plut  Photon.plut  Rollei_CN200+2383.33.plut  base.plut  cc.plut  cinestill800t.33.plut  cn200.plut  config.json  e100.plut  fl3.plut  leica.plut  monochrome.plut  natura1600+3513.33.plut  nature1600.plut  nc.plut  pentax.plut  pro400h.33.plut  ricoh_green.plut  ricoh_negative.plut  ricoh_positive.plut  ricoh_yellow.plut  standard.plut  superia1600+3513.33.plut  superia1600.plut  ultramax400.plut  velvia50.33.plut  光子鲜明.plut  富士标准.plut  徕卡影调.plut  徕卡黑白.plut  索尼FL3.plut  索尼VV2.plut
app/src/main/cpp/: CMakeLists.txt  dcp_parser.cpp  lut_processor.cpp  native-lib.cpp  stacking_utils.cpp  stacking_utils.h  vulkan_raw_stacker.cpp  vulkan_raw_stacker.h  vulkan_stacker.cpp  vulkan_stacker.h  vulkan_utils.cpp
app/src/main/cpp/dcp/XMPStub/include/: XMP.incl_cpp  XMPStub.hpp
app/src/main/cpp/dcp/dng_sdk/source/: dng_shared_cpp.diff
app/src/main/cpp/libjpeg-turbo/: CMakeLists.txt
app/src/main/cpp/shaders/: accumulate.comp  accumulate_raw.comp  align_lk.comp  color_scatter_raw.comp  normalize.comp  normalize_color_hr.comp  normalize_green_hr.comp  normalize_raw.comp  raw_structure_tensor.comp  robustness_raw.comp  structure_tensor.comp
app/src/main/java/com/hinnka/mycamera/: MainActivity.kt  MyCameraApplication.kt
app/src/main/res/drawable/: auto_awesome.xml  auto_awesome_color.xml  btn_capture_bg.xml  btn_capture_bg_dark.xml  btn_capture_bg_light.xml  btn_secondary_bg.xml  btn_secondary_bg_dark.xml  btn_secondary_bg_light.xml  ghost_solid.xml  ic_brand_apple.xml  ic_brand_apple_light.xml  ic_brand_canon.xml  ic_brand_dji.xml  ic_brand_fujifilm.xml  ic_brand_fujifilm_light.xml  ic_brand_generic.xml  ic_brand_hasselblad.xml  ic_brand_hasselblad_light.xml  ic_brand_honor.xml  ic_brand_honor_light.xml  ic_brand_huawei.xml  ic_brand_huawei_light.xml  ic_brand_leica.xml  ic_brand_nikon.xml  ic_brand_olympus.xml  ic_brand_oppo.xml  ic_brand_panasonic.xml  ic_brand_pentax.xml  ic_brand_ricoh.xml  ic_brand_samsung.xml  ic_brand_sony.xml  ic_brand_sony_light.xml  ic_brand_vivo.xml  ic_brand_xiaomi.xml  ic_camera.xml  ic_live_photo.xml  ic_output_all.xml  widget_background.xml  widget_background_light.xml
app/src/main/res/layout/: phantom_widget.xml  view_motion_photo_player.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/xml/: file_paths.xml  phantom_widget_info.xml
app/src/test/java/com/hinnka/mycamera/: ExampleUnitTest.kt
doc/: camera.md  frame.md  gallery.md  handheld-super-res-mainpaper-siggraph19.md  zoom.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: convert_luts.py  find_missing_strings.py  revert_luts.py
(+181 files in other folders)
